Changelog
=========

1.4.2 (unreleased)
------------------

- Nothing changed yet.


1.4.1 (2015-07-21)
------------------

- Fixed tests [keul]
- Removed useless empty ALT atribute on link [keul]
- Fixed link to comments to prevent final slash before hash [keul]

1.4.0 (2013-07-08)
------------------

- fixed discussion count method [micecchi]
- fixed translations [micecchi]
- added new field that allows to select image size [micecchi]

1.3.0 (2012-07-23)
------------------

* added social sharing field (if installed sc.social.bookmarks) [micecchi]
* added z3c.autoinclude support [micecchi]
* fixed Plone4 compatibility [micecchi]

1.2.7 (2011/10/24)
------------------

* fix fields control check [micecchi]

1.2.6 (2011/03/14)
------------------

* changed portlet edit permission [micecchi]
* translated portlet name [micecchi]

1.2.5 (2010/10/18)
------------------

* fix check for comments [micecchi]

1.2.4 (2010/10/07)
------------------

* fix check for comments [micecchi]

1.2.3 (2010/09/27)
------------------

* fixed translation [micecchi]

1.2.2 (2010/09/20)
------------------

* new feature: added number of comments field [micecchi]

1.2.1 (2010/02/03)
------------------

* fixed bug for new fields in old version [micecchi]
* fixed portlet template to allows to show formatted description [micecchi]

1.2.0 (2010/01/13)
------------------

* added portletClass field to portlet config. This can allow add some CSS classed for the portlet [fdelia]

1.1.1 (2009/11/13)
------------------

* fixed problem with anonymous users [micecchi]

1.1.0(2009/11/12)
-----------------

* added portlet title divided from document title [micecchi]

1.0.0 (2009/10/22)
------------------

* Initial release