@@ -4,7 +4,8 @@ Changelog
 1.4.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- No render the portlet when the user can't access to the content
+  [cekk]
 
 
 1.4.1 (2015-07-21)
